--- a/templates/index.html
+++ b/templates/index.html
@@ -224,6 +224,16 @@
                     console.error('Error regenerating summary:', error);
                 });
         }
+
+        fetch("/login", {
+            method: "POST",
+            credentials: "include",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({ username, password })
+        })
+
     </script>
 </body>
 
