add account page

--- a/templates/index.html
+++ b/templates/index.html
@@ -214,6 +214,7 @@
             <div id="auth-buttons">
                 <button onclick="openLogin()">Login</button>
                 <button onclick="openSignup()">Sign Up</button>
+                <button onclick="window.location.href='/account'">My Account</button>
             </div>
 
             <div id="profile-dropdown" style="display: none;">
