add account page

--- a/templates/index.html
+++ b/templates/index.html
@@ -221,6 +221,7 @@
                 <button onclick="toggleDropdown()" class="avatar-button">👤</button>
                 <div id="dropdown-menu">
                     <p id="username-display">User</p>
+                    <a href="/account"><button style="margin-bottom: 10px;">My Account</button></a>
                     <button onclick="logout()">Logout</button>
                 </div>
             </div>
