add email verification

--- a/templates/index.html
+++ b/templates/index.html
@@ -151,6 +151,7 @@
             font-size: 2.5em;
             margin: 0 auto;
             white-space: nowrap;
+            width: 100%;
         }
 
         #auth-buttons,
@@ -214,7 +215,6 @@
             <div id="auth-buttons">
                 <button onclick="openLogin()">Login</button>
                 <button onclick="openSignup()">Sign Up</button>
-                <button onclick="window.location.href='/account'">My Account</button>
             </div>
 
             <div id="profile-dropdown" style="display: none;">
